Stops ticker from truncating long strings

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -155,7 +155,6 @@ h1,h2,h3,h4,h5 {
 .bus-route--ticker { /* the outer div with the black border */
 clear: both;
 background: #fff;
-width: 2400px;
 height: 50px;
 margin: 0;
 padding: 0;
